corrigiendo validacion de envio

--- a/presentacion/registro.html
+++ b/presentacion/registro.html
@@ -156,7 +156,7 @@
               <br />
               <input
                 type="password"
-                minlength="8"
+                minlength="6"
                 maxlength="12"
                 id="password"
                 value=""
@@ -167,7 +167,7 @@
               <input
                 type="password"
                 id="password2"
-                minlength="8"
+                minlength="6"
                 maxlength="12"
                 name="contrasenia"
                 value=""
@@ -177,7 +177,7 @@
 
           <fieldset id="bloquePersona">
             <legend>Persona</legend>
-            <div>
+            <div id="persona">
               <label for="nombre">Nombre</label>
               <br />
               <input
@@ -226,7 +226,7 @@
                   type="text"
                   id="InputPasaporte"
                   maxlength="9"
-                  minlength="9"
+                  minlength="8"
                   name="nrodocumento"
                   value=""
                   placeholder="Introduce tu Pasaporte"
@@ -237,7 +237,7 @@
 
           <fieldset id="bloqueEmpresa" style="display: none">
             <legend>Empresa</legend>
-            <div>
+            <div id="empresa">
               <label>Razon Social</label>
               <br />
               <input
@@ -246,7 +246,6 @@
                 maxlength="18"
                 name="razon-social"
                 id="razon_social"
-                value=""
               />
               <br />
               <label for="rut">Rut</label>
@@ -257,7 +256,6 @@
                 maxlength="12"
                 name="rut"
                 id="rut"
-                value=""
               />
             </div>
           </fieldset>
