corrigiendo validacion de envio terminado

--- a/presentacion/registro.html
+++ b/presentacion/registro.html
@@ -210,7 +210,6 @@
                   name="nrodocumento"
                   value=""
                   placeholder="Introduce tu cedula"
-                  pattern="[0-9]"
                   minlength="8"
                   maxlength="9"
                 />
@@ -221,6 +220,7 @@
                   value=""
                   maxlength="11"
                   placeholder="Introduce tu DNI"
+                  disabled
                 />
                 <input
                   type="text"
@@ -230,6 +230,7 @@
                   name="nrodocumento"
                   value=""
                   placeholder="Introduce tu Pasaporte"
+                  disabled
                 />
               </select>
             </div>
@@ -246,6 +247,7 @@
                 maxlength="18"
                 name="razon-social"
                 id="razon_social"
+                disabled
               />
               <br />
               <label for="rut">Rut</label>
@@ -256,6 +258,7 @@
                 maxlength="12"
                 name="rut"
                 id="rut"
+                disabled
               />
             </div>
           </fieldset>
