--- a/presentacion/login.html
+++ b/presentacion/login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/style_login.css" />
-    <script src="js/main.js"></script>
+
     <link
       rel="icon"
       sizes="16x16 32x32 48x48"
@@ -99,5 +99,7 @@
         Todos los derechos reservados
       </b>
     </footer>
+    <script src="js/login.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
