--- a/presentacion/index.html
+++ b/presentacion/index.html
@@ -59,40 +59,48 @@
           </ul>
         </div>
         <!--login-->
+
         <div class="navbar-right">
           <ul>
-            <li>
-              <input
-                class="control"
-                type="email"
-                name="usuario"
-                id="usuario"
-                placeholder="n° cliente o correo"
-              />
-            </li>
-            &nbsp;
-            <li>
-              <input
-                class="control"
-                type="password"
-                name="contrasenia"
-                id="contrasenia"
-                placeholder="*******"
-              />
-            </li>
-            &nbsp;
-            <li>
-              <input
-                class="botons"
-                id="ingresar"
-                type="submit"
-                value="Ingresar"
-              />
-            </li>
-            &nbsp;
-            <!--<li class="navbar-email">sisviansa@gmail.com</li>-->
-            <p><a href="registro.html">Registrarse</a></p>
-            &nbsp;
+            <form
+              class="form-list"
+              action="../logica/controladorCliente.php"
+              method="post"
+              id="formUser"
+            >
+              <li>
+                <input type="hidden" name="login" value="cliente" />
+                <input
+                  class="control"
+                  type="email"
+                  name="usuario"
+                  id="usuario"
+                  placeholder="n° cliente o correo"
+                />
+              </li>
+              &nbsp;
+              <li>
+                <input
+                  class="control"
+                  type="password"
+                  name="contrasenia"
+                  id="contrasenia"
+                  placeholder="Contraseña"
+                />
+              </li>
+              &nbsp;
+              <li>
+                <input
+                  class="botons"
+                  id="ingresar"
+                  type="submit"
+                  value="Ingresar"
+                />
+              </li>
+              <p><a href="registro.html">Registrarse</a></p>
+            </form>
+            &nbsp; &nbsp;
+            <span id="mostrarUsuario"></span>
             <li class="navbar-shopping-cart">
               <!--<button type="image" class="btn-abrir" img src="./assets/icons/icon_shopping_cart.svg" alt="shopping cart"></button>-->
               <button type="button" class="btn-abrir">
@@ -324,10 +332,10 @@
         Todos los derechos reservados
       </b>
     </footer>
+    <script src="js/carrito.js"></script>
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/carrito.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
