Se modifico name y value del input hidden en Formulario de registro

--- a/presentacion/registro.html
+++ b/presentacion/registro.html
@@ -77,9 +77,9 @@
         >
           <input
             type="hidden"
-            name="insert"
+            name="accion"
             id="insertCliente"
-            value="cliente-persona"
+            value="insert-cliente-persona"
           />
           <fieldset>
             <input
