Se modifico name y value de input hidden en form

--- a/presentacion/index.html
+++ b/presentacion/index.html
@@ -48,7 +48,7 @@
         <ul>
           <form class="form-list" action="../logica/controladorCliente.php" method="post" id="formUser">
             <li>
-              <input type="hidden" name="login" value="cliente" />
+              <input type="hidden" name="accion" value="login" />
               <input class="control" type="email" name="usuario" id="usuario" placeholder="n° cliente o correo" />
             </li>
             <li>
