--- a/presentacion/index.html
+++ b/presentacion/index.html
@@ -139,7 +139,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="assets/recursos/menu_comun/baja_en_calorias_3.png" class="d-block w-100" alt="..." />
+            <img src="assets/recursos/menu_comun/celiacos_3.png" class="d-block w-100" alt="..." />
             <div class="carousel-caption d-none d-md-block">
               <h5>Menú n°3</h5>
             </div>
@@ -159,7 +159,7 @@
   <br />
 
   <form action="../logica/x.php" method="post" class="input_menues">
-    <fieldset>
+    <fieldset class="eleccion_menu">
       <input type="radio" name="TipoDieta" id="formCeliaco" class="form-check-input" />
       <label for="TipoDieta">Celiaco</label>
       <input type="radio" name="TipoDieta" id="formClasica" />
