--- a/presentacion/index.html
+++ b/presentacion/index.html
@@ -127,19 +127,19 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="10000">
-            <img src="assets/recursos/menu_comun/celiacos_1.png" class="d-block w-100" alt="..." />
+            <img src="assets/recursos/menu_comun/celiacos_1.jpg" class="d-block w-100" alt="..." />
             <div class="carousel-caption d-none d-md-block">
               <h5>Menú n°1</h5>
             </div>
           </div>
           <div class="carousel-item" data-bs-interval="2000">
-            <img src="assets/recursos/menu_comun/celiacos_2.png" class="d-block w-100" alt="..." />
+            <img src="assets/recursos/menu_comun/celiacos_2.jpg" class="d-block w-100" alt="..." />
             <div class="carousel-caption d-none d-md-block">
               <h5>Menú n°2</h5>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="assets/recursos/menu_comun/celiacos_3.png" class="d-block w-100" alt="..." />
+            <img src="assets/recursos/menu_comun/celiacos_3.jpg" class="d-block w-100" alt="..." />
             <div class="carousel-caption d-none d-md-block">
               <h5>Menú n°3</h5>
             </div>
